@@ -633,3 +633,4 @@ in 0.1.13.
 
 0.1.52
 ------
+- relax reflection kernel accuracy for i386. Necessary for Debian build.
